# atlas-os

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
atlas_os/: __init__.py  cli.py  config.py  daily.py  diagnostics.py  executive.py  inbox.py  logging_config.py  morning_brief.py  release.py  web_app.py
atlas_os/agents/: __init__.py  base.py  orchestrator.py  registry.py  tasks.py  updates.py
atlas_os/core/: __init__.py  approvals.py  artifacts.py  audit_log.py  (+6 more)
docs/: AGENT_ARCHITECTURE.md  ATLAS_AGENTS.md  ATLAS_OS_MASTER_PLAN.md  DATA_SOURCES.md  FUTURE_EXPANSION_ROADMAP.md  GREENROCK_DERIVATIVE_WORKBENCH.md  GREENROCK_PRODUCT_NOTES.md  GREENROCK_REPORT_AGENT_ORCHESTRATION.md  GREENROCK_REPORT_DRY_RUN_SCHEDULE.md  GREENROCK_SCORE_METHODOLOGY.md  IMPLEMENTATION_ROADMAP.md  MONTHLY_REPORT_RELEASE_CHECKLIST.md  OPERATOR_RUNBOOK.md  PRD.md  README.md  RELEASE_NOTES_v0.8.0-alpha.md  RELEASE_NOTES_v0.8.1.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v0.9.1.md  REPOSITORY_STRUCTURE.md  SYSTEM_ARCHITECTURE.md
scripts/: atlas-dev  atlas-serve
tests/: __init__.py  test_approval_workflow.py  test_cli_inspection.py  test_command_center.py  test_greenrock_derivatives.py  test_greenrock_indicators.py  test_greenrock_lifecycle.py  test_greenrock_market_data.py  test_greenrock_pdf_export.py  test_greenrock_report.py  test_greenrock_report_agents.py  test_greenrock_score_methodology.py  test_greenrock_scoring.py  test_greenrock_screening.py  test_greenrock_universe_manager.py  test_user_experience_cli.py  test_workflow_persistence.py  test_workflow_runner.py
(+34 files in other folders)
