[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-os"
version = "0.9.1"
description = "Atlas OS governed local-first research operating system."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Atlas OS" }
]
dependencies = []

[project.optional-dependencies]
market-data = [
  "yfinance>=0.2",
]

[project.scripts]
atlas = "atlas_os.cli:main"

[tool.setuptools.packages.find]
include = ["atlas_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
